2006-06-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 3505: BE multi-language flexforms do not work (t3lib_tceforms)
	
2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Template tools (Web>Template) had hard-coded background colours
	* Made Web > Template > Info skinnable

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Make t3lib_div::arrayToLogString() accept an empty string as empty list
	* Fix bug #2938: edit icons have two title attributes, one hardcoded as an empty string

2006-06-04  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Unify PHP5 check in config_defaults.php and deprecate $TYPO_VERSION

2006-06-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3612: no c-prefix for URL fragment in menus (section index)
	* Fix bug #2493: TCE-forms don't skins icons / t3skin lacks undo.gif, csv.gif and savedoknew.gif (thanks to Clemens Riccabona for the latter)
	* Fix bugs #3326 and #3392: problems with php_uname()
	* "Update" buttons of admin panel did not reload page in Firefox

2006-05-31  Ernesto Baschny <ernst@cron-it.de>

	* Fix bug #3522: Linking images to hidden pages results in click-enlarge

2006-05-31 Bernhard Kraft  <kraftb@kraftb.at>

	* Fix a problem of the EM: "No file uploaded!" when retrying install after a failed dependency check

2006-05-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Corrected error message for config.baseURL=1

2006-05-20  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #2874: Current page in navigation tree wasn't being highlighted on IE6

2006-05-20   Rupert Germann  <rupi@gmx.li>

	* Fixed bug #2566: XClass include code was missing in wsol_preview.php.

2006-05-18   Rupert Germann  <rupi@gmx.li>

	* Fixed bug #0132: % signs in extra parameters of form contentelements where not handled correctly.

2006-05-18  Ernesto Baschny  <ernst@cron-it.de>
